component slideNotices created but no modified

--- a/src/app/home/components/table-products/table-products.component.html
+++ b/src/app/home/components/table-products/table-products.component.html
@@ -1,4 +1,4 @@
-<div class="mt-7 pb-2 m-1 bg-white border-radius-6">
+<div class="pb-2 m-1 bg-white border-radius-6">
     <div class="box d-flex flex-wrap flex-justify-center">
         <app-card-product class="w-25 max-w-350 mt-2"></app-card-product>
         <app-card-product class="w-25 max-w-350 mt-2"></app-card-product>
