section notices completed

--- a/src/app/home/components/slide-notice/slide-notice.component.html
+++ b/src/app/home/components/slide-notice/slide-notice.component.html
@@ -1,5 +1,27 @@
-<div class="mt-7">
-    <div class="d-flex flex-justify-center">
-
+<div class="mt-7 ">
+    <h4 class="ml-2 fz-1-5">Notices Today</h4>
+    <div class="d-flex flex-justify-center flex-align-center">
+        <div class="w-95 d-flex flex-justify-center overflow-hidden">
+            <div class="w-250 m-1">
+                <img class="h-150 img-size-contain" src="../../../../assets/images/chartNft.png" alt="image">
+                <h4>Title Article</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam natus molestias fugit eligendi </p>
+            </div>
+            <div class="w-250 m-1">
+                <img class="h-150 img-size-contain" src="../../../../assets/images/chartNft.png" alt="image">
+                <h4>Title Article</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam natus molestias fugit eligendi </p>
+            </div>
+            <div class="w-250 m-1">
+                <img class="h-150 img-size-contain" src="../../../../assets/images/chartNft.png" alt="image">
+                <h4>Title Article</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam natus molestias fugit eligendi </p>
+            </div>
+            <div class="w-250 m-1">
+                <img class="h-150 img-size-contain" src="../../../../assets/images/chartNft.png" alt="image">
+                <h4>Title Article</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam natus molestias fugit eligendi </p>
+            </div>
+        </div>
     </div>
 </div>
