--- a/src/styles.css
+++ b/src/styles.css
@@ -38,8 +38,20 @@ body {
     justify-content: center;
 }
 
+.flex-justify-start {
+    justify-content: start;
+}
+
+.flex-justify-end {
+    justify-content: end;
+}
+
 .flex-wrap {
     flex-wrap: wrap;
+}
+
+.flex-direction-column {
+    flex-direction: column;
 }
 
 .list-style-none {
@@ -111,11 +123,23 @@ body {
 }
 
 .w-4 {
+    width: 4%;
+}
+
+.w-95 {
+    width: 96%;
+}
+
+.w-40 {
     width: 40%;
 }
 
 .w-5 {
     width: 50%;
+}
+
+.h-150 {
+    height: 150px;
 }
 
 .h-200 {
@@ -159,4 +183,8 @@ body {
 
 .text-align-end {
     text-align: end;
+}
+
+.fz-1-5 {
+    font-size: 1.5em;
 }
