implement graphql and petition from notices

--- a/src/app/home/views/dashboard/dashboard.component.html
+++ b/src/app/home/views/dashboard/dashboard.component.html
@@ -1,3 +1,4 @@
 <app-header></app-header>
 <app-slide-notice></app-slide-notice>
 <app-table-products></app-table-products>
+<app-footer></app-footer>
