--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,1 +1,36 @@
-<p>footer works!</p>
+<div>
+    <div class="box-radius d-flex">
+        <div class="w-33">
+            <h4 class="fz-3 text-white">COinGeko</h4>
+            <p class="text-white">Lorem ipsum dolor sit, amet djlkfsdjkfsdj fdslkjfklds</p>
+        </div>
+        <div class="w-33 text-center">
+            <h5 class="fz-1-5 text-white">Notices</h5>
+            <ul class="list-style-none">
+                <li>
+                    <a class="text-decoration-none" href="#">Link 1</a>
+                </li>
+                <li>
+                    <a class="text-decoration-none" href="#">Link 1</a>
+                </li>
+                <li>
+                    <a class="text-decoration-none" href="#">Link 1</a>
+                </li>
+            </ul>
+        </div>
+        <div class="w-33 text-center">
+            <h5 class="fz-1-5 text-white">About US</h5>
+            <ul class="list-style-none">
+                <li>
+                    <a class="text-decoration-none" href="#">Link 1</a>
+                </li>
+                <li>
+                    <a class="text-decoration-none" href="#">Link 1</a>
+                </li>
+                <li>
+                    <a class="text-decoration-none" href="#">Link 1</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</div>
