--- a/src/app/home/components/card-product/card-product.component.css
+++ b/src/app/home/components/card-product/card-product.component.css
@@ -84,8 +84,9 @@
     padding: 1em;
 }
 
-.max-w-350 {
-    max-width: 350px;
+.max-w-300 {
+    max-width: 300px;
+    min-width: 300px;
 }
 
 .w-25 {
