--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="d-flex flex-justify-center">
     <div class="box-radius d-flex">
         <div class="w-33">
             <h4 class="fz-3 text-white">COinGeko</h4>
