page with view products created and graphql schemas completed

--- a/src/app/home/components/card-product/card-product.component.css
+++ b/src/app/home/components/card-product/card-product.component.css
@@ -186,3 +186,9 @@ margin: 0 10px;
 .table__tr {
     margin: 10px;
 }
+
+
+.box__img--scale:hover {
+    transition: .5s all;
+    transform: scale(1.1);
+}
