--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,7 +1,9 @@
 <div class="d-flex flex-justify-center">
     <header class="header d-flex flex-space-between flex-align-center">
         <div class="header__box">
-            <h1 class="header__title">CoinGeko</h1>
+            <a class="text-decoration-none" routerLink="">
+                <h1 class="header__title">CoinGeko</h1>
+            </a>
         </div>
         <div class="w-40">
             <form >
