views login and signup created

--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -2,7 +2,7 @@
     <div class="box-radius d-flex">
         <div class="w-33">
             <h4 class="fz-3 text-white">COinGeko</h4>
-            <p class="text-white">Lorem ipsum dolor sit, amet djlkfsdjkfsdj fdslkjfklds</p>
+            <p class="text-white mt-1">Buy and Sell your NFT now Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quos, quas. Distinctio molestiae ab perspiciatis veniam harum</p>
         </div>
         <div class="w-33 text-center">
             <h5 class="fz-1-5 text-white">Notices</h5>
