--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -15,13 +15,13 @@
             </form>
         </div>
         <ul class="header__box d-flex flex-align-center">
-            <li class="header__li header__li--space list-style-none cursor-pointer">
+            <li routerLink="/login" class="header__li header__li--space list-style-none cursor-pointer cursor-pointer">
                 Login Account
             </li>
             <li class="header__li header__li--space list-style-none cursor-pointer">
                 Ask frecuenly
             </li>
-            <li class="header__li header__li--space list-style-none cursor-pointer btn btn-p-8">
+            <li routerLink="/signup" class="header__li header__li--space list-style-none cursor-pointer btn btn-p-8">
                 Create Account
             </li>
         </ul>
