--- a/src/styles.css
+++ b/src/styles.css
@@ -18,6 +18,16 @@ body {
     --color-white: #fff;
 }
 
+.container-box { 
+    padding: 15px;
+    margin: 15px;
+    background-color: var(--bg-primary);
+    border-radius: 10px;
+    position: fixed;
+    width: 95%;
+    top: 0;
+}
+
 .box-radius {
     padding: 15px;
     margin: 15px;
@@ -134,6 +144,10 @@ body {
     padding: 1em;
 }
 
+.p-5 {
+    padding: 6px;
+}
+
 .max-w-300 {
     max-width: 300px;
     min-width: 300px;
@@ -156,8 +170,16 @@ body {
     width: 4%;
 }
 
+.w-80 {
+    width: 80%;
+}
+
 .w-95 {
     width: 96%;
+}
+
+.w-100 {
+    width: 100%;
 }
 
 .w-40 {
@@ -219,6 +241,14 @@ body {
     border-radius: 6px;
 }
 
+.border-radius-50 {
+    border-radius: 50%;
+}
+
+.border-none {
+    border: none;
+}
+
 .text-align-end {
     text-align: end;
 }
@@ -233,6 +263,10 @@ body {
 
 .fz-3 {
     font-size: 3em;
+}
+
+.fz-16 {
+    font-size: 16px;
 }
 
 .text-decoration-none {
